# antenna-classifier

./: .env  .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml
.secrets/: README.md
docker/dashboard/: Dockerfile
docker/nec_solver/: Dockerfile  api.py
docs/: EXPERIMENT_OODA_NEC_GENERATION.md  HAMFEEDS_INTEGRATION_PLAN.md
reports/: ooda_test_results.json  pipeline_ooda_test_output.txt  pipeline_test_results.json
scripts/: load_test_solver.py  test_ooda_pipeline.py  test_structured_pipeline.py  warmup_cache.py
src/antenna_classifier/: __init__.py  classification_store.py  classifier.py  cli.py  dashboard.py  fingerprint.py  nec_buildability.py  nec_calculators.py  nec_generator.py  nec_goals.py  nec_pipeline.py  nec_policies.py  nec_tuner.py  parser.py  simulator.py  storage.py  tuning_lab.py  validator.py  visualizer.py
src/antenna_classifier/nec_context/: batwing.txt  beverage.txt  bobtail_curtain.txt  collinear.txt  delta_loop.txt  dipole.txt  discone.txt  end_fed.txt  fractal.txt  half_square.txt  helix.txt  hexbeam.txt  inverted_v.txt  j_pole.txt  loop.txt  lpda.txt  magnetic_loop.txt  moxon.txt  patch.txt  phased_array.txt  quad.txt  quagi.txt  rhombic.txt  turnstile.txt  v_beam.txt  vertical.txt  wire_array.txt  yagi.txt  zigzag.txt
tests/: test_cache.py  test_classifier.py  test_dashboard.py  test_fingerprint.py  test_guess_freq.py  test_nec_tuner.py  test_parser.py  test_pipeline.py  test_simulator.py  test_tuner_integration.py  test_tuning_lab.py  test_ui_regression.py  test_validator.py  test_visualizer.py
(+4 files in other folders)
